tests/typing/errors/over_application/pb.zf

val f : int -> prop.

goal f 5 6.

