tests/typing/errors/over_application/pb.expected
File "tests/typing/errors/over_application/pb.zf", line 4, character 5-10:
4 | goal f 5 6.
         ^^^^^
Error Over application: this application has 1 too many term arguments.
